CacheService implemented for storing IQuerable<object>

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "PhdApi": "Server=DESKTOP-QVSEF8O;Database=SimulatedAnnealing;IntegratedSecurity=True;TrustServerCertificate=True;"
   },
+  "BestPartiesLocal": {
+    "2024": {
+      "małopolskie": [
+        "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+        "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+        "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+        "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+      ]
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
