Microsoft Identity Added

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=SimulatedAnnealing;IntegratedSecurity=True;TrustServerCertificate=True;"
+    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;"
   },
   "BestPartiesLocal": {
     "2024": {
@@ -34,5 +34,10 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "http://localhost:5210",
+    "Audience": "http://localhost:5210",
+    "SigningKey": "swordfish"
+  }
 }
