Feature(UserService UnitTests added) Feature(DatabaseEndpoint IntegrationTests - TBD)

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;"
+    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
+    "PhdApi_Test": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;"
   },
   "BestPartiesLocal": {
     "2024": {
