--- a/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
+++ b/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFrameworkCore.Testing.Moq" Version="8.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
