Fix(Integration Tests running with dockerzed DB)

--- a/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
+++ b/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>fc775a17-3a15-43c7-be81-8e250f658d48</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,6 +33,10 @@
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="Testcontainers.MsSql" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DatabaseDocker\" />
   </ItemGroup>
 
 </Project>
