--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
-    "PhdApi_Test": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;"
+    "PhdApi_Test": "Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True;"
   },
   "BestPartiesLocal": {
     "2024": {
