Folder structure refactoring

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -3,6 +3,9 @@
     "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
     "PhdApi_Test": "Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True" //"Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True;"
   },
+  "AvailableDistricts": {
+    "małopolskie": [2024]
+  },
   "BestPartiesLocal": {
     "2024": {
       "małopolskie": [
