Injection of configuration (from appsettings.json) to request validators

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -4,7 +4,16 @@
     "PhdApi_Test": "Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True" //"Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True;"
   },
   "AvailableDistricts": {
-    "małopolskie": [2024]
+    "Districts": {
+      "małopolskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      }
+     }
   },
   "BestPartiesLocal": {
     "2024": {
