--- a/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
+++ b/SimulatedAnnealing.Server/SimulatedAnnealing.Server.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="MockQueryable.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="MockQueryable.Moq" Version="7.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.0.2" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
