Algorithm serivce implemented

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -13,17 +13,10 @@
           "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
         ]
       }
-     }
-  },
-  "BestPartiesLocal": {
-    "2024": {
-      "małopolskie": [
-        "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
-        "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
-        "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
-        "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
-      ]
     }
+  },
+  "DistrictsSeats": {
+    "małopolskie" :  39
   },
   "Logging": {
     "LogLevel": {
