Changed return object from Optimize (Algorithm Method)

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -12,11 +12,20 @@
           "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
           "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
         ]
+      },
+      "śląskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA"
+        ]
       }
     }
   },
   "DistrictsSeats": {
-    "małopolskie" :  39
+    "małopolskie": 39,
+    "śląskie" : 45
   },
   "Logging": {
     "LogLevel": {
