Change configuration, added seats no for particular local assemblies

--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -18,14 +18,153 @@
           "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
           "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
           "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+
+        ]
+      },
+      "kujawsko-pomorskie": {
+        "2024": [
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - ",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "lubelskie": {
+        "2024": [
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "dolnośląskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY STOWARZYSZENIE \"BEZPARTYJNI SAMORZĄDOWCY\"",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "lubuskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "łódzkie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "mazowieckie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "opolskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY",
+          "KOMITET WYBORCZY WYBORCÓW ŚLĄSCY SAMORZĄDOWCY"
+        ]
+      },
+      "podkarpackie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "podlaskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "pomorskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY",
           "KOALICYJNY KOMITET WYBORCZY LEWICA"
+        ]
+      },
+      "świętokrzystkie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "warmińsko-mazurskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY"
+        ]
+      },
+      "wielkopolskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA"
+        ]
+      },
+      "zachodniopomorskie": {
+        "2024": [
+          "KOMITET WYBORCZY PRAWO I SPRAWIEDLIWOŚĆ",
+          "KOALICYJNY KOMITET WYBORCZY KOALICJA OBYWATELSKA",
+          "KOALICYJNY KOMITET WYBORCZY TRZECIA DROGA POLSKA 2050 SZYMONA HOŁOWNI - POLSKIE STRONNICTWO LUDOWE",
+          "KOMITET WYBORCZY WYBORCÓW KONFEDERACJA I BEZPARTYJNI SAMORZĄDOWCY",
+          "KOALICYJNY KOMITET WYBORCZY LEWICA",
+          "KOMITET WYBORCZY KOALICJA SAMORZĄDOWA OK SAMORZĄD"
         ]
       }
     }
   },
   "DistrictsSeats": {
     "małopolskie": 39,
-    "śląskie" : 45
+    "śląskie": 45,
+    "kujawsko-pomorskie": 30,
+    "lubelskie": 33,
+    "dolnośląskie": 36,
+    "lubuskie": 30,
+    "łódzkie": 33,
+    "mazowieckie": 51,
+    "opolskie": 30,
+    "podkarpackie": 33,
+    "podlaskie": 30,
+    "pomorskie": 33,
+    "świętokrzystkie": 30,
+    "warmińsko-mazurskie": 30,
+    "wielkopolskie": 39,
+    "zachodniopomorskie" :  30
   },
   "Logging": {
     "LogLevel": {
