--- a/SimulatedAnnealing.Server/Properties/launchSettings.json
+++ b/SimulatedAnnealing.Server/Properties/launchSettings.json
@@ -52,7 +52,7 @@
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windowsAuthentication": true,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:7424",
