--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,12 @@ version: '3.8'
 services:
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: phd-db
+    container_name: mssql
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=Str0ngPa$$w0rd
     ports:
       - "1434:1433"
-    volumes:
-      - sqldata:/var/opt/mssql
 
   backend:
     container_name: phd-backend
@@ -35,5 +33,3 @@ services:
      depends_on:
        - backend
 
-volumes:
-  sqldata:
