Now we are back xd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,6 @@
 version: '3.8'
 
 services:
-  db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: mssql
-    environment:
-      - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=Str0ngPa$$w0rd
-    ports:
-      - "1434:1433"
-
   backend:
     container_name: phd-backend
     build:
@@ -19,17 +10,14 @@ services:
       - "8080:8080"
       - "8081:8081"
     environment:
-      - ConnectionStrings__PhdApi=Server=db;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True;
-    depends_on:
-      - db
-
+      - ConnectionStrings__PhdApi=Server=host.docker.internal;Database=PhdApi;TrustServerCertificate=True;
+    
   frontend:
-     container_name: phd-frontend
-     build:
-       context: C:/Users/matja/source/repos/simmulated-annealing-front/
-       dockerfile: Dockerfile
-     ports:
-       - "3000:80"
-     depends_on:
-       - backend
-
+    container_name: phd-frontend
+    build:
+      context: C:/Users/matja/source/repos/simmulated-annealing-front/
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
