--- a/SimulatedAnnealing.Server/appsettings.Development.json
+++ b/SimulatedAnnealing.Server/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "PhdApi": "Server=host.docker.internal;Database=PhdApi;User Id=phd_user;Password=SilneChaslo1!;TrustServerCertificate=True;",
+    "PhdApi_Test": "Server=host.docker.internal\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$w0rd;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
