--- a/SimulatedAnnealing.Server/appsettings.json
+++ b/SimulatedAnnealing.Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
-    "PhdApi_Test": "Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True" //"Server=localhost\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$$w0rd;TrustServerCertificate=True;"
+    "PhdApi": "Server=host.docker.internal;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
+    "PhdApi_Test": "Server=host.docker.internal\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$w0rd;TrustServerCertificate=True"
   },
   "AvailableDistricts": {
     "Districts": {
@@ -164,7 +164,7 @@
     "świętokrzystkie": 30,
     "warmińsko-mazurskie": 30,
     "wielkopolskie": 39,
-    "zachodniopomorskie" :  30
+    "zachodniopomorskie": 30
   },
   "Logging": {
     "LogLevel": {
