--- a/SimulatedAnnealing.Server/appsettings.Development.json
+++ b/SimulatedAnnealing.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;User Id=phd_user;Password=SilneChaslo1!;TrustServerCertificate=True;",
+    "PhdApi": "Server=DESKTOP-QVSEF8O;Database=PhdApi;Integrated Security=True;TrustServerCertificate=True;",
     "PhdApi_Test": "Server=host.docker.internal\\Phd_db,1401;Database=PhdApi;User Id=sa;Password=Str0ngPa$w0rd;TrustServerCertificate=True"
   },
   "Logging": {
